Correction alignement titres/catégories

--- a/styles/app.css
+++ b/styles/app.css
@@ -7,6 +7,18 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+.title-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+.title-section > .title {
+    font-size: 35px;
+    font-weight: 700;
+}
+
 /* Accueil */
 
 .container {
@@ -55,6 +67,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 .preview-title {
@@ -74,6 +87,11 @@
     grid-row: 1 / 3;
     border-right: 1px solid #000;
     border-left: none;
+    padding-left: 0;
+}
+
+.master .preview-title {
+    font-size: 25px;
 }
 
 /* Catégories */
